--- a/AudioFile/src/main/webapp/css/sidebars.css
+++ b/AudioFile/src/main/webapp/css/sidebars.css
@@ -12,7 +12,7 @@ sidebar {
   flex-wrap: nowrap;
   height: 100vh;
   height: -webkit-fill-available;
-  max-height: 94.4;
+  max-height: 94.4vh;
   overflow-x: auto;
   overflow-y: hidden;
 }
