--- a/AudioFile/src/main/webapp/css/table.css
+++ b/AudioFile/src/main/webapp/css/table.css
@@ -24,6 +24,10 @@
     background: rgba(0, 0, 0, .75);
 }
 
+.table-hover tbody tr:hover {
+	background: #B8860B;
+}
+
 .table-title h2 {
 	margin: 5px 0 0;
 	font-size: 24px;
@@ -33,7 +37,7 @@
 	float: right;
 }
 
-.table-title .btn {
+/* .table-title .btn {
 	color: #fff;
 	float: right;
 	font-size: 13px;
@@ -54,13 +58,14 @@
 .table-title .btn span {
 	float: left;
 	margin-top: 2px;
-}
+} */
 
 table.table tr th, table.table tr td {
     text-align: left;
 	border-color: #e9e9e9;
-    color: black;
+    color: white;
 	padding: 12px 15px;
+    font-size: 20px;
 	vertical-align: middle;
 }
 
@@ -72,15 +77,9 @@ table.table tr th:last-child {
 	width: 100px;
 }
 
-table.table-striped tbody tr:nth-of-type(odd) {
-	background-color: #fcfcfc;
-}
 
-table.table-striped.table-hover tbody tr:hover {
-	background: #f5f5f5;
-}
 
-table.table th i {
+/* table.table th i {
 	font-size: 13px;
 	margin: 0 5px;
 	cursor: pointer;
@@ -90,9 +89,9 @@ table.table td:last-child i {
 	opacity: 0.9;
 	font-size: 22px;
 	margin: 0 5px;
-}
+} */
 
-table.table td a {
+/* table.table td a {
 	font-weight: bold;
 	color: #566787;
 	display: inline-block;
@@ -120,4 +119,4 @@ table.table .avatar {
 	border-radius: 50%;
 	vertical-align: middle;
 	margin-right: 10px;
-}
+} */
