--- a/AudioFile/src/main/webapp/css/album.css
+++ b/AudioFile/src/main/webapp/css/album.css
@@ -31,23 +31,32 @@
 }
 
 .albumText {
-    padding-top: 25px;
+    padding-top: 0px;
+    margin-top: 20px;
+    background : rgba(0,0,0,0.75);
     text-align: Left;
 }
 .albumText-title {
     font-size: 45px;
+    margin-top: 10px;
     font-family: Impact, fantasy;
     font-variant: small-caps;
     font-stretch: ultra-expanded;
 }
 .albumText-artist {
-    font-size: 20px;
+    font-size: 25px;
     font-weight: bold;
     font-family: Arial;
+    margin-bottom: 5px;
     color: white;
 }
+.albumText p {
+    font-weight: 400;
+    font-family: Arial;
+}
 a.albumText-artist:hover {
-    color: black;
+    text-decoration: none;
+    color: #B8860B;
 }
 
 
