--- a/AudioFile/src/main/webapp/css/main.css
+++ b/AudioFile/src/main/webapp/css/main.css
@@ -29,7 +29,6 @@
 	padding-left: 10px;
 	position:absolute;
 } */
-
 .center-alignment {
 	position: absolute;
 	height: 100%;
@@ -42,12 +41,27 @@
 	padding-bottom: 10px;
 }
 
+.login-textbox{
+	width:100px;
+}
+
+.password-textbox{
+	width:100px;
+}
+
+
+label {
+	color: white;
+	text-align:right;
+	display:inline-block;
+}
+
 .account-design {
-	position: absolute;
+	/* 	position: absolute;
 	height: 100%;
 	width: 40%;
 	margin-left: 30%;
-	margin-right: 30%;
+	margin-right: 30%; */
 	color: black;
 }
 
@@ -77,9 +91,11 @@
 	background-color: #242424;
 	height: 100%;
 }
-/* .spacer{
-    margin:10px;
-    } */
+
+.spacer {
+	margin-top: 10px;
+}
+
 a {
 	color: white;
 	font: Helvetica;
@@ -97,6 +113,10 @@ body {
 	background-color: #B8860B;
 	background-position: right bottom;
 	color: white;
+}
+
+.container-boy {
+	text-align: center;
 }
 
 .boxed {
