--- a/AudioFile/src/main/webapp/css/main.css
+++ b/AudioFile/src/main/webapp/css/main.css
@@ -66,6 +66,12 @@ justify-content:center;
 margin:auto;
 }
 
+.user-image-md {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+}
+
 /* On small screens, set height to 'auto' for sidenav and grid */
 @media screen and (max-width: 767px) {
   .sidenav {
