--- a/AudioFile/src/main/webapp/css/table.css
+++ b/AudioFile/src/main/webapp/css/table.css
@@ -18,6 +18,7 @@
 	padding: 10px 30px;
 	margin: -20px -25px 10px;
 	border-radius: 3px 3px 0 0;
+	text-align: left;
 }
 
 .table-body {
@@ -61,6 +62,9 @@
 	margin-top: 2px;
 } */
 
+/* ----------------------------------------------------------------------------
+	music-table
+---------------------------------------------------------------------------- */
 table.music-table tr th, table.music-table tr td {
     text-align: left;
 	border-color: #e9e9e9;
@@ -71,7 +75,9 @@ table.music-table tr th, table.music-table tr td {
 }
 
 table.music-table td a:hover {
-    color: white;
+    color: black;
+	text-decoration: none;
+	font-weight: bold;
 }
 
 table.music-table tr th:first-child {
@@ -82,6 +88,28 @@ table.music-table tr th:last-child {
 	width: 100px;
 }
 
+
+/* ----------------------------------------------------------------------------
+	commentTable
+---------------------------------------------------------------------------- */
+th.commentTable-userImage {
+	width: 10%;
+}
+th.commentTable-comment {
+	width: 100%;
+}
+th.commentTable-date {
+	width: 20%;
+}
+
+
+/* ----------------------------------------------------------------------------
+	albumTable
+---------------------------------------------------------------------------- */
+.albumTable-artistText {
+	font-size: 15px;
+	font-weight: 700;
+}
 
 th.albumTable-songNumber {
     width: 5%;
