--- a/AudioFile/src/main/webapp/css/table.css
+++ b/AudioFile/src/main/webapp/css/table.css
@@ -101,7 +101,17 @@ th.commentTable-comment {
 th.commentTable-date {
 	width: 20%;
 }
+td.commentTable-commentText {
+	font-size: 17px !important;
+}
 
+.show-all-btn {
+	width: 100%;
+	height: 45px;
+	font-size: medium;
+	font-weight: bold;
+	font-family: Arial;
+}
 
 /* ----------------------------------------------------------------------------
 	albumTable
@@ -123,6 +133,7 @@ th.albumTable-artists {
 th.albumTable-duration {
     width: 5%;
 }
+
 
 
 /* table.table th i {
