--- a/AudioFile/src/main/webapp/css/table.css
+++ b/AudioFile/src/main/webapp/css/table.css
@@ -1,10 +1,11 @@
 .table-responsive {
-	margin: 30px 0;
+	margin: 30px, 30px;
+	padding-top: 30px;
     overflow-x: auto;
 }
 
 .table-wrapper {
-	min-width: 1000px;
+	min-width: 500px;
 	background: #fff;
 	padding: 20px 25px;
 	border-radius: 3px;
@@ -102,13 +103,20 @@ p.commentTable-dateText {
 	font-size: 14px !important;
 }
 
+.album-comment-box {
+	width: 100%;
+}
+.album-comment-box textarea {
+	resize: vertical;
+}
 
-.show-all-btn {
+.table-btn {
 	width: 100%;
 	height: 45px;
 	font-size: medium;
 	font-weight: bold;
 	font-family: Arial;
+	color: black;
 }
 
 /* ----------------------------------------------------------------------------
