--- a/AudioFile/src/main/webapp/css/main.css
+++ b/AudioFile/src/main/webapp/css/main.css
@@ -41,23 +41,34 @@
 	padding-bottom: 10px;
 }
 
-.login-textbox{
-	width:100px;
+.center-table {
+	width: 40%;
+	margin-left: 30%;
+	margin-right: 30%;
 }
 
-.password-textbox{
-	width:100px;
+.artist-spacer {
+	padding-top: 10px;
 }
 
-.dropdown-shower{
+.login-textbox {
+	width: 100px;
+}
+
+.password-textbox {
+	width: 100px;
+}
+
+.dropdown-shower {
 	padding-top: 10px;
 	height: 100%;
 	margin: auto;
 }
+
 label {
 	color: white;
-	text-align:right;
-	display:inline-block;
+	text-align: right;
+	display: inline-block;
 }
 
 .account-design {
@@ -93,6 +104,9 @@ label {
 	height: 100%
 }
 
+.artist-text {
+	font:Helvetica;
+}
 /* Set gray background color and 100% height */
 .sidenav {
 	padding-top: 20px;
@@ -100,7 +114,6 @@ label {
 	background-color: #242424;
 	height: 100%;
 }
-
 
 .spacer {
 	margin-top: 10px;
@@ -125,13 +138,15 @@ body {
 	color: white;
 }
 
-.dropdown-menu{
-	color:black;
+.dropdown-menu {
+	color: black;
 }
-.dropdown-item{
-	color:black;
+
+.dropdown-item {
+	color: black;
 	text-align: center;
 }
+
 .container-boy {
 	text-align: center;
 }
