--- a/AudioFile/src/main/webapp/css/table.css
+++ b/AudioFile/src/main/webapp/css/table.css
@@ -81,6 +81,30 @@ table.music-table td a:hover {
 	font-weight: bold;
 }
 
+table.music-table {
+	width: 100%;
+}
+
+/* ----------------------------------------------------------------------------
+	results-table
+---------------------------------------------------------------------------- */
+/* table.results-table tr:first-child  {
+
+} */
+th.songResults-table-albumImage {
+	width: 10%;
+}
+th.songResults-table-albums {
+	width: 20%;
+}
+th.songResults-table-artists {
+	width: 20%;
+}
+th.songResults-table-songName {
+	width: 50%;
+}
+
+
 /* ----------------------------------------------------------------------------
 	ratingTable
 ---------------------------------------------------------------------------- */
