--- a/AudioFile/src/main/webapp/css/editPages.css
+++ b/AudioFile/src/main/webapp/css/editPages.css
@@ -19,6 +19,17 @@
     resize: vertical;
 }
 
+.editing-table-checkboxes {
+    width: 100%;
+    height: 100%;
+    max-height: 200px;
+    overflow-y: auto;
+}
+
+.editing-table-checkboxes label:hover {
+    background-color: rgba(0,0,0,0.75)
+}
+
 /* .editing-table-dropdown {
     width: 100%;
 }
